--- a/index.html
+++ b/index.html
@@ -332,26 +332,29 @@
                     }
                 ]
             },
-            odysseas: {
-                fullName: "Odysseas Androutsos",
-                bio: "A hero of the Greek War of Independence against the Ottoman Empire. As commander of the Greek forces in Eastern Continental Greece, he achieved fame and recognition for his leadership and military acumen.",
-                wikipediaUrl: "https://en.wikipedia.org/wiki/Odysseas_Androutsos",
-                achievements: [
-                    {
-                        title: "Battle of Gravia Inn",
-                        description: "Led a small force to victory against a much larger Ottoman army, becoming a legendary figure of the Greek Revolution."
-                    },
-                    {
-                        title: "Strategic Leadership",
-                        description: "Successfully commanded Greek forces in Eastern Continental Greece during critical early stages of the revolution."
-                    },
-                    {
-                        title: "Symbol of Revolution",
-                        description: "Became one of the most celebrated heroes of the Greek War of Independence."
-                    }
-                ]
-            }
-        };
+odysseas: {
+    fullName: "Odysseus (Odysseas) of Ithaca",
+    bio: "The legendary Greek king of Ithaca and the hero of Homer's epic poem 'The Odyssey'. Known for his intelligence, cunning, and his epic 10-year journey home after the Trojan War, facing monsters, sirens, and gods along the way.",
+    wikipediaUrl: "https://en.wikipedia.org/wiki/Odysseus",
+    achievements: [
+        {
+            title: "Trojan War Victory",
+            description: "Masterminded the Trojan Horse strategy that finally ended the 10-year siege of Troy."
+        },
+        {
+            title: "The Odyssey",
+            description: "Survived a decade-long journey home, outsmarting Cyclops, Sirens, and the wrath of Poseidon."
+        },
+        {
+            title: "Leadership",
+            description: "Proved himself as one of Greece's greatest tacticians and resilient leaders."
+        },
+        {
+            title: "Cultural Legacy",
+            description: "Became the archetype of the resourceful hero in Western literature."
+        }
+    ]
+}
         
         const modal = document.getElementById('memberModal');
         const modalTitle = document.getElementById('modalTitle');
